--- a/style.css
+++ b/style.css
@@ -360,52 +360,80 @@ footer {
 
 @media screen and (min-width: 768px) {
 
-	.main-header {
-		display: block;
-		background: url('assets/BG_HOME.png') no-repeat center center;
-		background-size: cover;
-		padding-top: 10px;
-		overflow: hidden;
-
-		&.mobile { display: none; }
-	}
-
-	ul.nav {
-    gap: 16px;
-    background-color: unset;
-		/* background-color: rgba(0,0,0,.4); */
-    padding: 20px;
-	}
-
-	.logo {
-			width: 200px;
-	}
-
-	button.btn.login {
-			position: static;
-	}
-
-	nav.navbar {
-			display: flex;
-			align-items: center;
-			gap: 24px;
-			margin: 20px;
-			background-color: rgba(0,0,0,0.4);
-			border: solid 1px var(--orange);
-	}
-
-	.overlay-img {
-		position: absolute;
+	.container {
 		width: 100%;
-		height: 92%;
-		background: url('assets/hero-image.png') no-repeat right bottom;
-		background-size: contain;
-		bottom: 0;
-		right: 0;
-}
+		max-width: 1300px;
+	}
 
-	.social {
-			padding: 0 20px 20px;
+	.main-header {
+
+		&.desktop { display: none; }
+		
+		&.mobile { 
+			position: relative;
+			display: block;
+			height: 90vh;
+			background: url('assets/hero-bg_dt.png') no-repeat;
+			background-size: cover;
+			aspect-ratio: unset;
+
+			& .content {
+				position: static;
+				width: 100%;
+				max-width: 1300px;
+				height: 100%;
+				margin-right: auto;
+				margin-left: auto;
+				padding: unset;
+			}
+
+			& .navbar {
+				display: flex;
+				justify-content: space-between;
+				gap: 24px;
+				margin: 50px 0 0;
+
+				& .nav {
+					gap: 24px;
+					padding: 0 40px !important;
+					background-color: unset;
+					flex: 0 !important;
+
+					& a {
+						font-size: 24px !important;
+					}
+				}
+
+				& .logo {
+					width: 300px !important;
+					padding: 24px !important;
+				}
+
+				& .login {
+					margin-left: 60px !important;
+					font-size: 18px !important;
+				}
+			}
+
+			& .social {
+				padding: 16px 60px !important;
+
+				& .btn-link {
+					width: 36px !important;
+				}
+			}
+
+			& .overlay-img {
+				position: absolute;
+				display: block;
+				bottom: 0;
+				right: 5%;
+				width: 40%;
+				height: 95%;
+				background: url('assets/hero-image_dt.png') no-repeat;
+				background-size: cover;
+			}
+		}
 	}
 
 	article {
@@ -416,6 +444,12 @@ footer {
 	.img-container {
 			height: unset !important;
 			margin: 0 !important;
+	}
+
+	.flex-grid {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    gap: 24px;
 	}
 
 	.footer-logo {
