--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button {
 
 	&.mobile {
 		display: flex;
-		background: url(assets/header-bg.png) no-repeat center center;
+		background: #93197e url(assets/header-bg.png) no-repeat center center;
 		background-size: contain;
 		aspect-ratio: 1 / .84;
 
@@ -196,6 +196,10 @@ main {
 				width: 85%;
 				height: 75px;
 				margin: 32px auto 0;
+
+				& img {
+					border-radius: 16px;
+				}
 			}
 		}
 
@@ -275,7 +279,7 @@ main {
 			left: -16px;
 			top: 40%;
 			flex: 1;
-			width: 75%;
+			width: 70%;
 			max-width: 240px;
 			aspect-ratio: 1.832;
 			background: url(assets/parceria-coruripe.png) no-repeat;
@@ -299,6 +303,10 @@ main {
 		justify-content: space-between;
 		gap: 8px;
 	}
+
+	.parceria-container.mobile { display: block }
+
+	.parceria-container.desktop { display: none }
 
 	& .text-parcerias {
 		background-color: white;
@@ -436,20 +444,120 @@ footer {
 		}
 	}
 
+	section {
+		&.card {
+			&.has-image {
+				padding: 0 !important;
+
+				& p {
+					flex: 1;
+					margin-bottom: 0;
+					padding: 40px;
+					text-align: center;
+				}
+
+				& .img-container {
+					flex: 1;
+					height: unset !important;
+					margin: 0 !important;
+					border-radius: 0 6px 6px 0;
+					overflow: hidden;
+					
+					& img {
+						height: 100%;
+						border-radius: 0;
+					}
+				}
+			}
+
+			& h2 {
+				left: calc(25% - 64px) !important;
+			}
+		}
+	}
+
 	article {
     display: flex;
     gap: 40px;
 	}
 
-	.img-container {
-			height: unset !important;
-			margin: 0 !important;
+	.flex-container {
+		display: flex;
+		gap: 16px;
+
+		& .simple-card {
+			width: 33.333%;
+		}
 	}
 
 	.flex-grid {
     flex-wrap: nowrap;
     justify-content: flex-start;
     gap: 24px;
+	}
+
+	.parceria-container.mobile { display: none !important }
+
+	.parceria-container.desktop {
+    display: flex !important;
+		border-radius: 6px;
+		background-color: var(--purple);
+		overflow: hidden;
+
+		& .text-parcerias {
+			display: block;
+			flex: 1;
+			padding: 40px 80px 30px !important;
+			border-radius: 0;
+			background-color: transparent;
+			color: white;
+
+			& h2 {
+				margin-top: 0 !important;
+				padding: 0;
+				background-color: transparent;
+				border-radius: 0;
+				color: white;
+				font-size: 28px;
+				font-weight: 500;
+				text-transform: uppercase;
+				letter-spacing: 1px;
+
+				& small {
+					font-size: 18px;
+					font-weight: 300;
+				}
+			}
+		}
+
+		& .box-header {
+			flex: 1;
+			min-width: 50%;
+			background-color: transparent;
+
+			.d-flex {
+				display: block;
+				height: 100%;
+			}
+
+			.parceria-img {
+				position: static;
+				width: unset;
+				height: 100%;
+				max-width: unset;
+				border-radius: 0;
+				box-shadow: none;
+				background-size: cover !important;
+			}
+
+			.subtitle {
+				display: none;
+			}
+		}
+	}
+
+	.parcerias .d-flex {
+		justify-content: space-around;
 	}
 
 	.footer-logo {
