--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ main {
 	& h3 {
 			margin: 0;
 			font-weight: 500;
-			font-size: 16px;
+			font-size: 18px;
 	}
 
 	& .btn {
@@ -245,11 +245,16 @@ main {
 
 		&.more-btn {
 			display: block;
-			margin: 30px auto 40px;
-			padding-left: 24px;
-			padding-right: 24px;
+			margin: 50px auto 40px;
+			padding: 12px 24px;
 			border-radius: 0;
+			font-size: 16px;
 			text-transform: uppercase;
+			opacity: .5;
+
+			&:hover {
+				opacity: 1;
+			}
 		}
 	}
 
